--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -25,12 +25,16 @@
 
             <ListBox.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Edit" Command="{Binding EditChannelCommand, Mode=OneWay}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
+                    <MenuItem Header="Edit" Command="{Binding EditChannelCommand, Mode=OneWay}" 
+                              IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Sync" Command="{Binding SyncChannelCommand, Mode=OneWay}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
+                    <MenuItem Header="Sync" Command="{Binding SyncChannelCommand, Mode=OneWay}" 
+                              IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Network32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
@@ -40,7 +44,10 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Delete" Command="{Binding DeleteChannelCommand, Mode=OneWay}" IsEnabled="{Binding !IsWorking}" IsVisible="{Binding !SelectedEntry.IsStateChannel}">
+                    <MenuItem Header="Delete" Command="{Binding DeleteChannelCommand, Mode=OneWay}" 
+                              IsEnabled="{Binding !IsWorking, Mode=OneWay}" 
+                              IsVisible="{Binding !SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
@@ -50,12 +57,16 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Xmark32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Backup" Command="{Binding BackupCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.IsStateChannel}">
+                    <MenuItem Header="Backup" Command="{Binding BackupCommand, Mode=OneWay}" 
+                              IsVisible="{Binding SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Backup32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Restore" Command="{Binding RestoreCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.IsStateChannel}">
+                    <MenuItem Header="Restore" Command="{Binding RestoreCommand, Mode=OneWay}" 
+                              IsVisible="{Binding SelectedEntry.IsStateChannel, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Restore32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
@@ -67,7 +78,7 @@
 
         <Expander ExpandDirection="Up" Grid.Row="2" Grid.Column="0">
             <Expander.Header >
-                <StackPanel Orientation="Horizontal" IsEnabled="{Binding !IsWorking}" Height="25">
+                <StackPanel Orientation="Horizontal" IsEnabled="{Binding !IsWorking, Mode=OneWay}" Height="25">
                     <Button HorizontalAlignment="Left" Command="{Binding AddChannelCommand, Mode=OneTime}" ToolTip.Tip="Add">
                         <Panel>
                             <Ellipse />
