--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -29,36 +29,44 @@
 
             <ListBox.ContextMenu>
                 <ContextMenu>
+                    <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}">
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <MenuItem Header="To:Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" 
                               CommandParameter="{x:Static enums:WatchState.Watched}" 
-                              IsVisible="{Binding !SelectedEntry.Watched}">
+                              IsVisible="{Binding !SelectedEntry.Watched, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Checkmark32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="To:Planned" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
                               CommandParameter="{x:Static enums:WatchState.Planned}"
-                              IsVisible="{Binding !SelectedEntry.Planned}">
+                              IsVisible="{Binding !SelectedEntry.Planned, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Time32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}">
-                        <MenuItem.Icon>
-                            <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link">
+                    <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" 
+                              CommandParameter="link"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="title">
+                    <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" 
+                              CommandParameter="title"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Go to Parent" Command="{Binding GoToParentCommand, Mode=OneWay}" IsVisible="{Binding IsParentState}">
+                    <MenuItem Header="Go to Parent" Command="{Binding GoToParentCommand, Mode=OneWay}" 
+                              IsVisible="{Binding IsParentState, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.LeftArrow32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
@@ -67,22 +75,30 @@
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
-                        <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
+                        <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" 
+                                  CommandParameter="hd"
+                                  >
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="audio">
+                        <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" 
+                                  CommandParameter="audio"
+                                  >
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="video">
+                        <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" 
+                                  CommandParameter="video"
+                                  >
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="subs">
+                        <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" 
+                                  CommandParameter="subs"
+                                  >
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp"/>
                             </MenuItem.Icon>
@@ -90,12 +106,15 @@
                     </MenuItem>
                     <MenuItem Header="Clear state" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
                               CommandParameter="{x:Static enums:WatchState.Notset}"
-                              IsVisible="{Binding SelectedEntry.WatchStateSet}">
+                              IsVisible="{Binding SelectedEntry.WatchStateSet, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Xmark32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Delete" Command="{Binding DeleteItemCommand, Mode=OneWay}" IsVisible="{Binding SelectedEntry.Downloaded}">
+                    <MenuItem Header="Delete" Command="{Binding DeleteItemCommand, Mode=OneWay}" 
+                              IsVisible="{Binding SelectedEntry.Downloaded, Mode=OneWay}"
+                              >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
