--- a/src/v00v.Views/Explorer/ItemControl.xaml
+++ b/src/v00v.Views/Explorer/ItemControl.xaml
@@ -16,7 +16,8 @@
             <Path Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" 
                   Data="F1 M 46.479,0.587 C 45.064,2.731 43.659,4.881 42.233,7.018 C 34.590,18.476 26.954,29.938 19.287,41.380 C 16.541,45.479 16.412,45.484 13.178,42.022 C 9.187,37.750 5.308,33.373 1.255,29.163 C -1.890,25.897 1.704,24.784 3.060,22.970 C 4.534,20.998 6.058,20.783 7.758,22.862 C 9.236,24.668 11.106,26.173 12.457,28.058 C 14.160,30.435 15.412,30.149 17.309,28.225 C 25.700,19.712 34.212,11.316 42.688,2.886 C 43.681,1.898 44.725,0.961 45.746,0.000 C 45.990,0.196 46.235,0.391 46.479,0.587 Z"
                   Stretch="Fill"
-                  Fill="Green" IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Watched}, Mode=TwoWay}" />
+                  Fill="Green" 
+                  IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Watched}, Mode=TwoWay}" />
 
             <Path Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" 
                   Data="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,18 C5.6,18 2,14.4 2,10 C2,5.6 5.6,2 10,2 C14.4,2 18,5.6 18,10 C18,14.4 14.4,18 10,18 Z M10.5,5 L9,5 L9,11 L14.2,14.2 L15,12.9 L10.5,10.2 L10.5,5 Z"
@@ -29,7 +30,7 @@
                     Command="{Binding $parent[ListBox].DataContext.OpenCommand, Mode=OneTime}" 
                     CommandParameter="{Binding}"
                     >
-                <Image Source="{Binding Thumb, Mode=OneWay}" Opacity="{Binding OpacityThumb}" 
+                <Image Source="{Binding Thumb, Mode=OneWay}" Opacity="{Binding OpacityThumb, Mode=OneWay}" 
                        Stretch="Fill"  
                        VerticalAlignment="Center" HorizontalAlignment="Center">
                 </Image>
@@ -49,25 +50,28 @@
                 <Border BorderBrush="#FF000000" BorderThickness="0.3" CornerRadius="3" Margin="5,0,0,2" VerticalAlignment="Bottom">
                     <TextBlock Text="{Binding DurationString, Mode=OneWay}" FontSize="15" Margin="5,0,5,0"/>
                 </Border>
-                <TextBlock Text="{Binding ViewCount}" FontSize="12" Margin="8,5,0,3" VerticalAlignment="Bottom"/>
+                <TextBlock Text="{Binding ViewCount, Mode=OneWay}" FontSize="12" Margin="8,5,0,3" VerticalAlignment="Bottom"/>
                 <TextBlock Text="{Binding DurationAgo, Mode=OneWay}" FontSize="12" Margin="6,5,0,3" VerticalAlignment="Bottom"/>
             </StackPanel>
 
             <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" Margin="0,0,5,0">
-                <TextBlock Text="{Binding LikeCount}" FontSize="9.5" HorizontalAlignment="Right" />
-                <TextBlock Text="{Binding DislikeCount}" FontSize="9.5" HorizontalAlignment="Right" />
-                <TextBlock Text="{Binding Comments}" FontSize="9.5" HorizontalAlignment="Right" />
-                <TextBlock Text="{Binding ViewDiff}" FontSize="9.5" HorizontalAlignment="Right" />
+                <TextBlock Text="{Binding LikeCount, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right" />
+                <TextBlock Text="{Binding DislikeCount, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right" />
+                <TextBlock Text="{Binding Comments, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right" />
+                <TextBlock Text="{Binding ViewDiff, Mode=OneWay}" FontSize="9.5" HorizontalAlignment="Right" />
             </StackPanel>
 
-            <Panel Grid.Row="0" Grid.Column="3" Grid.RowSpan="3" Width="15" IsVisible="{Binding !Downloaded}">
-                <Button Background="#bdacd1" IsVisible="{Binding !IsWorking}"
-                        Command="{Binding $parent[ListBox].DataContext.DownloadCommand, Mode=OneWay}" CommandParameter="{Binding}">
+            <Panel Grid.Row="0" Grid.Column="3" Grid.RowSpan="3" Width="15" IsVisible="{Binding !Downloaded, Mode=OneWay}">
+                <Button Background="#bdacd1" IsVisible="{Binding !IsWorking, Mode=OneWay}"
+                        Command="{Binding $parent[ListBox].DataContext.DownloadCommand, Mode=OneWay}" 
+                        CommandParameter="{Binding}"
+                        >
                     <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp"/>
                 </Button>
-                <ProgressBar IsVisible="{Binding IsWorking}"
-                             Value="{Binding Percentage, Mode=TwoWay}"
-                             Orientation="Vertical" Opacity="0.5" MinHeight="0"/>
+                <ProgressBar IsVisible="{Binding IsWorking, Mode=OneWay}"
+                             Value="{Binding Percentage, Mode=OneWay}"
+                             Orientation="Vertical" Opacity="0.5" MinHeight="0"
+                             />
             </Panel>
 
         </Grid>
