--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -4,8 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:explorer="clr-namespace:v00v.Views.Explorer"
     xmlns:converters="clr-namespace:v00v.Model.Converters;assembly=v00v.Model"
-    xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model">
-
+    xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model"
+    >
+    <UserControl.KeyBindings>
+        <KeyBinding Command="{Binding RunItemCommand, Mode=OneWay}" Gesture="Enter"/>
+    </UserControl.KeyBindings>
     <Grid RowDefinitions="*,auto" Background="#242e44">
         <ListBox Grid.Row="0" Name="ItemList" BorderThickness="0"
                  Items="{Binding Items}"
@@ -34,20 +37,20 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="To:Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" 
-                              CommandParameter="{x:Static enums:WatchState.Watched}" 
-                              IsVisible="{Binding !SelectedEntry.Watched, Mode=OneWay}"
-                              >
-                        <MenuItem.Icon>
-                            <Image Source="resm:v00v.MainApp.Icons.Dark.Checkmark32.png?assembly=v00v.MainApp"/>
-                        </MenuItem.Icon>
-                    </MenuItem>
                     <MenuItem Header="To:Planned" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
                               CommandParameter="{x:Static enums:WatchState.Planned}"
                               IsVisible="{Binding !SelectedEntry.Planned, Mode=OneWay}"
                               >
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Time32.png?assembly=v00v.MainApp"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="To:Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" 
+                              CommandParameter="{x:Static enums:WatchState.Watched}" 
+                              IsVisible="{Binding !SelectedEntry.Watched, Mode=OneWay}"
+                              >
+                        <MenuItem.Icon>
+                            <Image Source="resm:v00v.MainApp.Icons.Dark.Checkmark32.png?assembly=v00v.MainApp"/>
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" 
