--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -132,42 +132,42 @@
                 <Grid ColumnDefinitions="*,auto,auto" HorizontalAlignment="Stretch" Width="{Binding $parent[Grid].Bounds.Width}">
                     <TextBox Text="{Binding SearchText, Mode=TwoWay}" HorizontalAlignment="Left"/>
                     <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0">
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By date" 
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By date" 
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Timestamp}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Timestamp"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By views"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By views"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.View}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="View"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By likes"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By likes"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Like}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Like"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By dislikes"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By dislikes"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Dislike}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Dislike"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By comment"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By comment"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Comment}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Comment"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By duration"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By duration"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Duration}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Duration"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By title"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By title"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Title}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Title"
                                      />
-                        <RadioButton GroupName="Sort" ToolTip.Tip="By view diff"
+                        <RadioButton GroupName="ItemSort" ToolTip.Tip="By view diff"
                                      IsChecked="{Binding Path=ItemSortBase, Mode=OneWay, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:ItemSort.Diff}}"
                                      Command="{Binding SetSortCommand, Mode=OneWay}"
                                      CommandParameter="Diff"
